Adds DLQ reader's lock to force single reader access to segments when clean_consumed feature is enabled (#14256)
Uses the FileLock mechanism, already used in PQ, to force the single consumer pattern in case clean_consumed is enabled. This avoid concurrency problem of multiple readers trying to delete each other consumed tail segments.